--- a/TestRepo_project/.vscode/settings.json
+++ b/TestRepo_project/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "TestRepo.sln"
+    "dotnet.defaultSolution": "TestRepo_project.sln"
 }
