--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ crashlytics-build.properties
 
 SpaceSurvivor/Library/PackageCache/
 TestRepo_project/ProjectSettings/SceneTemplateSettings.json
+TestRepo_project/ProjectSettings/ShaderGraphSettings.asset
