--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ crashlytics-build.properties
 SpaceSurvivor/Library/PackageCache/
 TestRepo_project/ProjectSettings/SceneTemplateSettings.json
 TestRepo_project/ProjectSettings/ShaderGraphSettings.asset
+TestRepo_project/ProjectSettings/ShaderGraphSettings.asset
